build_errors_final12.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.14/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 

> Configure project :
-------------------------------------
NeoGradle detected a problem with your project: Run.getProgramArguments()
Details: The method getProgramArguments() is deprecated and will be removed in the future
Potential Solution: Use getArguments() instead of getProgramArguments()
More information: https://github.com/neoforged/NeoGradle/blob/NG_7.1/README.md#common-runs-configuration-types-configure-by-type
-------------------------------------

> Task :neoFormListLibraries UP-TO-DATE
> Task :cacheVersionManifest1.21.10 UP-TO-DATE
> Task :cacheVersionExecutableClient1.21.10 UP-TO-DATE
> Task :cacheVersionExecutableServer1.21.10 UP-TO-DATE
> Task :cacheVersionExtractedServer1.21.10 UP-TO-DATE
> Task :cacheVersionMappingsClient1.21.10 UP-TO-DATE
> Task :create1.21.10ClientExtraJar UP-TO-DATE
> Task :selectRawArtifactNg_dummy_ng.net.minecraft_client_1.21.10_client-extra UP-TO-DATE
> Task :neoFormListTransformLibraries UP-TO-DATE
> Task :neoFormStripClient UP-TO-DATE
> Task :neoFormStripServer UP-TO-DATE
> Task :neoFormMerge UP-TO-DATE
> Task :neoFormMergeMappings UP-TO-DATE
> Task :neoFormRename UP-TO-DATE
> Task :neoFormDecompile UP-TO-DATE
> Task :neoFormInject UP-TO-DATE
> Task :neoFormPatch UP-TO-DATE
> Task :neoFormPatchUserDev UP-TO-DATE
> Task :neoFormTransformSource UP-TO-DATE
> Task :neoFormRecompile UP-TO-DATE
> Task :supplyRawJarForneoFormJoined1.21.10-20251010.172816 UP-TO-DATE
> Task :selectRawArtifactNg_dummy_ng.net.neoforged_neoforge_21.10.52-beta UP-TO-DATE

> Task :compileJava
./gradlew : C:\Users\M
W\Downloads\coding\MCO
PTI\src\main\java\com\
randomstrangerpassenge
r\mcopt\MCOPT.java:8: 
error: cannot find sym
bol
At line:1 char:1
+ ./gradlew compileJav
a --no-daemon 2>&1 | O
ut-File -FilePath "bui
ld_er ...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (C:\Users\M   
 W\Dow...not find     
symbol:String) []    ,
 RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
import com.randomstran
gerpassenger.mcopt.ser
ver.ai.AIOptimizationS
ystem;
                      
                      
      ^
  symbol:   class AIOp
timizationSystem
  location: package co
m.randomstrangerpassen
ger.mcopt.server.ai
C:\Users\MW\Downloads\
coding\MCOPTI\src\main
\java\com\randomstrang
erpassenger\mcopt\MCOP
T.java:9: error: packa
ge com.randomstrangerp
assenger.mcopt.server.
entity.clearlag does n
ot exist
import com.randomstran
gerpassenger.mcopt.ser
ver.entity.clearlag.Cl
earLagManager;
                      
                      
                   ^
C:\Users\MW\Downloads\
coding\MCOPTI\src\main
\java\com\randomstrang
erpassenger\mcopt\mixi
n\server\ExperienceOrb
Mixin.java:3: error: p
ackage com.randomstran
gerpassenger.mcopt.ser
ver.entity.xp does not
 exist
import com.randomstran
gerpassenger.mcopt.ser
ver.entity.xp.XpOrbHan
dler;
                      
                      
             ^
C:\Users\MW\Downloads\
coding\MCOPTI\src\main
\java\com\randomstrang
erpassenger\mcopt\mixi
n\server\MobAIMixin.ja
va:3: error: cannot fi
nd symbol
import com.randomstran
gerpassenger.mcopt.ser
ver.ai.AIOptimizationS
ystem;
                      
                      
      ^
  symbol:   class AIOp
timizationSystem
  location: package co
m.randomstrangerpassen
ger.mcopt.server.ai
C:\Users\MW\Downloads\
coding\MCOPTI\src\main
\java\com\randomstrang
erpassenger\mcopt\MCOP
T.java:44: error: cann
ot find symbol
        NeoForge.EVENT
_BUS.register(new Clea
rLagManager());
                      
                  ^
  symbol:   class Clea
rLagManager
  location: class MCOP
T
C:\Users\MW\Downloads\
coding\MCOPTI\src\main
\java\com\randomstrang
erpassenger\mcopt\MCOP
T.java:63: error: cann
ot find symbol
                AIOpti
mizationSystem.init();
                ^
  symbol:   variable A
IOptimizationSystem
  location: class MCOP
T
C:\Users\MW\Downloads\
coding\MCOPTI\src\main
\java\com\randomstrang
erpassenger\mcopt\mixi
n\server\ExperienceOrb
Mixin.java:47: error: 
cannot find symbol
        int mergeDelay
 = XpOrbHandler.getMer
geCheckDelay();
                      
   ^
  symbol:   variable X
pOrbHandler
  location: class Expe
rienceOrbMixin
C:\Users\MW\Downloads\
coding\MCOPTI\src\main
\java\com\randomstrang
erpassenger\mcopt\mixi
n\server\ExperienceOrb
Mixin.java:57: error: 
cannot find symbol
        XpOrbHandler.m
ergeNearbyOrbs(thisOrb
);
        ^
  symbol:   variable X
pOrbHandler
  location: class Expe
rienceOrbMixin
C:\Users\MW\Downloads\
coding\MCOPTI\src\main
\java\com\randomstrang
erpassenger\mcopt\mixi
n\server\MobAIMixin.ja
va:38: error: cannot f
ind symbol
        if (AIOptimiza
tionSystem.isInitializ
ed()) {
            ^
  symbol:   variable A
IOptimizationSystem
  location: class MobA
IMixin
C:\Users\MW\Downloads\
coding\MCOPTI\src\main
\java\com\randomstrang
erpassenger\mcopt\mixi
n\server\MobAIMixin.ja
va:39: error: cannot f
ind symbol
            AIOptimiza
tionSystem.processMobG
oals(mob);
            ^
  symbol:   variable A
IOptimizationSystem
  location: class MobA
IMixin
C:\Users\MW\Downloads\
coding\MCOPTI\src\main
\java\com\randomstrang
erpassenger\mcopt\serv
er\entity\portal\Porta
lRedirectionHandler.ja
va:24: error: cannot f
ind symbol
        PortalMemoryTr
acker.redirectToRememb
eredPortal(player, eve
nt.getTo());
        ^
  symbol:   variable P
ortalMemoryTracker
  location: class Port
alRedirectionHandler
Note: Some input files
 use or override a dep
recated API.
Note: Recompile with -
Xlint:deprecation for 
details.
11 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///C:/Users/MW/Downloads/coding/MCOPTI/build/reports/problems/problems-report.html

FAILURE: Build failed 
with an exception.

* What went wrong:
Execution failed for t
ask ':compileJava'.
> Compilation failed; 
see the compiler outpu
t below.
  C:\Users\MW\Download
s\coding\MCOPTI\src\ma
in\java\com\randomstra
ngerpassenger\mcopt\MC
OPT.java:8: error: can
not find symbol
  import com.randomstr
angerpassenger.mcopt.s
erver.ai.AIOptimizatio
nSystem;
                      
                      
        ^
    symbol:   class AI
OptimizationSystem
    location: package 
com.randomstrangerpass
enger.mcopt.server.ai
  11 errors

* Try:
> Check your code and 
dependencies to fix th
e compilation error(s)
> Run with --scan to g
et full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 12s
23 actionable tasks: 1 executed, 22 up-to-date
